Fixed background issue on iPhone

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -1,6 +1,7 @@
 .App {
     text-align: center;
     background-image: url(../images/numbers.jpg);
+    background-size: auto;
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
